[workspace]
members = [
  "api", # JSON schema exporter

  # TGE
  "libraries/schedule",      # model of TGE vesting logic
  "libraries/linear-map",    # simple way of storing small number of addresses
  "contracts/snip20-sienna", # SNIP20 reference impl with deposit/redeem disabled
  "contracts/mgmt",          # mints and vests tokens according to schedule
  "contracts/rpt",           # claims from mgmt and splits the portion between recipients
  "contracts/rewards",       # liquidity provision rewards

  # Swap + IDO
  "libraries/amm-shared", # definitions that are shared between AMM and IDO
  "contracts/exchange",   # uniswap exchange contract implementation
  "contracts/factory",    # factory contract for creating exchanges
  "contracts/launchpad",  # Launchpad contract
  "contracts/ido",        # Sienna IDO
  "contracts/lp-token",   # snip20 liquidity provider token,
  "contracts/amm-snip20", # vanilla snip20 token, used when creating an IDO

  "contracts/router", # Copy and modifications of secretswap_router

  # Framework
  "libraries/fadroma-next/lib",
  "libraries/fadroma-next/bind-js",
  "libraries/migrate", # migration flag, as used by TGE before merging this feature into Fadroma
  "libraries/kukumba", # BDD testing framework
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
