[workspace]
members = [
  # TGE
  "libraries/schedule",      # model of TGE vesting logic
  "libraries/linear-map",    # simple way of storing small number of addresses
  "contracts/snip20-sienna", # SNIP20 reference impl with deposit/redeem disabled
  "contracts/mgmt",          # mints and vests tokens according to schedule
  "contracts/rpt",           # claims from mgmt and splits the portion between recipients
  "contracts/rewards",       # liquidity provision rewards

  # Swap + IDO
  "libraries/amm-shared",    # definitions that are shared between AMM and IDO
  "contracts/amm/exchange",  # uniswap exchange contract implementation
  "contracts/amm/factory",   # factory contract for creating exchanges
  "contracts/amm/launchpad", # Launchpad contract
  "contracts/amm/ido",       # Sienna IDO
  "contracts/amm/lp-token",  # snip20 liquidity provider token,
  "contracts/amm-snip20",    # vanilla snip20 token, used when creating an IDO
  "contracts/amm/router",    # Copy and modifications of secretswap_router
  "contracts/amm/tests",     # AMM integration tests

  # Lend
  "libraries/lend-shared",         # definitions that are shared across the lending contracts
  "contracts/lend/interest_model",
  "contracts/lend/oracle",
  "contracts/lend/overseer",
  "contracts/lend/market",

  # Framework
  "libraries/fadroma-next/crates/*",
  "libraries/migrate", # migration flag, as used by TGE before merging this feature into Fadroma
  "libraries/kukumba", # BDD testing framework
]

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
panic            = 'abort'
rpath            = false
