[package]
name = "sienna-amm-shared"
version = "0.1.0"
authors = ["Asparuh Kamenov <asparuhkamenov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }

cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
cosmwasm-utils = { git = "https://github.com/hackbg/cosmwasm-utils", rev = "949116e" }
secret-toolkit = { git = "https://github.com/enigmampc/secret-toolkit", branch = "debug-print" }

composable-admin = { path = "../fadroma/scrt-admin/composable-admin" }
fadroma-scrt-migrate = { path = "../fadroma/scrt-migrate" }
