[package]
name = "sienna-rpt"
version = "1.0.0"
authors = ["Adam Avramov <adam@hack.bg>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
fadroma = { path = "../fadroma" }
lazy_static = "1.4.0"
schemars = "0.7"
secret-toolkit = { git = "https://github.com/enigmampc/secret-toolkit" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
sienna-mgmt = { path = "../mgmt" }
snafu = { version = "0.6.3", features = ["backtraces"] }

[dev-dependencies]
kukumba = { path = "../kukumba" }
