[package]
name = "sienna_schedule"
version = "0.1.0"
authors = ["Adam Avramov <adam@hack.bg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
svg = { version = "0.9.0" }

[lib]
name = "sienna_schedule"
path = "src/lib.rs"

[[bin]]
name = "sienna_tsv2json"
path = "src/to_json.rs"

[[bin]]
name = "sienna_tsv2svg"
path = "src/to_svg.rs"
