[package]
name = "sienna_schedule"
version = "1.0.0-rc6"
authors = ["Adam Avramov <adam@hack.bg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
svg = { version = "0.9.0" }

[lib]
name = "sienna_schedule"
path = "lib/lib.rs"

#[[bin]]
#name = "sienna_tsv2json"
#path = "bin/tsv_to_json.rs"

#[[bin]]
#name = "sienna_json2svg"
#path = "bin/tsv_to_svg.rs"
