[package]
name = "utils"
version = "0.1.0"
authors = ["Asparuh Kamenov <asparuhkamenov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
secret-toolkit = { git = "https://github.com/enigmampc/secret-toolkit" }
