[package]
name = "ido"
version = "0.1.0"
authors = [
    "aakamenov <asparuhkamenov@gmail.com>",
    "Tibor Hudik <tibor@barrage.net>",
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
fadroma = { git="https://github.com/hackbg/fadroma", branch="21.07", features=[
    "scrt-addr",
    "scrt-callback",
    "scrt-contract",
    "scrt-migrate",
    "scrt-storage",
    "scrt-utils",
] }
schemars = "0.7"
serde = { version="1.0.103", default-features=false, features=["derive"] }
serde-json-wasm = "*"
amm-shared = { path="../../libraries/amm-shared" }
