[package]
name = "ido"
version = "0.1.0"
authors = [
    "aakamenov <asparuhkamenov@gmail.com>",
    "Tibor Hudik <tibor@barrage.net>",
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

amm-shared = { path = "../../libraries/amm-shared" }
