[package]
name = "launchpad"
version = "0.1.0"
authors = ["Tibor Hudik <tibor@barrage.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_json = "*"
rand = "0.7.3"

amm-shared = { path = "../../libraries/amm-shared" }
