[package]
name = "libraries"
version = "0.1.0"
authors = ["IntegralTeam <repo@sfxdx.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
#cosmwasm-bignumber = "2.0.0"
bigint = "4.4.3"
lazy_static = "1.4.0"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cosmwasm-schema = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
schemars = "0.7"
