[package]
name = "lp-token"
version = "0.1.0"
authors = ["Asparuh Kamenov <asparuh@hack.bg>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
amm-shared = { path = "../../libraries/amm-shared" }
wasm-bindgen = { optional = true, version = "0.2" }
fadroma-bind-js = { optional = true, path = "../../libraries/fadroma-next/bind-js" }

[features]
browser = [ "fadroma-bind-js", "wasm-bindgen" ]
