[package]
name = "sienna-mgmt"
version = "2.0.0-wip"
authors = ["Adam Avramov <adam@hack.bg>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

# lifted to crate root
#
#[profile.release]
#opt-level = 3
#debug = false
#rpath = false
#lto = true
#debug-assertions = false
#codegen-units = 1
#panic = 'abort'
#incremental = false
#overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
fadroma = { path = "../../libraries/fadroma" }
schemars = "0.7"
secret-toolkit = { git = "https://github.com/enigmampc/secret-toolkit" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
sienna_schedule = { path = "../../libraries/schedule" }
snafu = { version = "0.6.3", features = ["backtraces"] }

[dev-dependencies]
kukumba = { path = "../../libraries/kukumba" }
serde_json = "1.0"
