[package]
name = "sienna-mgmt"
version = "2.0.0"
authors = ["Adam Avramov <adam@hack.bg>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
cosmwasm-schema  = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
cosmwasm-std     = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
serde            = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars         = "0.7"
secret-toolkit   = { git = "https://github.com/hackbg/secret-toolkit", rev = "9a33d7b" }

fadroma          = { git = "https://github.com/hackbg/fadroma", branch = "21.05.2" }

linear-map       = { path = "../../libraries/linear-map" }
sienna-migrate   = { path = "../../libraries/migrate" }
sienna-schedule  = { path = "../../libraries/schedule" }

fadroma-bind-js = { optional = true, path = "../../libraries/fadroma-next/bind-js" }
wasm-bindgen = { optional = true, version = "0.2" }
js-sys = { optional = true, version = "0.3.55" }

[dev-dependencies]
kukumba = { git = "https://github.com/hackbg/kukumba", branch = "21.04" }
serde_json = "1.0"

[features]
default = []
# this allows the contract to be build for a mock environment
# that is hosted in a browser. allows dashboard and fast integration tests
browser = [ "fadroma-bind-js", "wasm-bindgen", "wasm-bindgen/serde-serialize", "js-sys" ]
apionly = []
