[package]
name = "sienna-rewards-benchmark"
version = "1.0.0"
authors = ["Adam Avramov <adam@hack.bg>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
path = "rewards.rs"

[features]
default = []

[dependencies]
schemars = "0.7"
serde    = { version = "1.0.103", default-features = false, features = ["derive"] }

fadroma  = { path = "../../libraries/fadroma-21.07/core", features = [
  "scrt-addr",
  "scrt-admin",
  "scrt-callback",
  "scrt-contract",
  "scrt-migrate",
  "scrt-snip20-api",
  "scrt-storage",
  "scrt-utils",
  "scrt-vk"
] }
composable-auth = { path = "../../libraries/fadroma-21.07/scrt-auth/composable-auth" }
composable-admin = { path = "../../libraries/fadroma-21.07/scrt-admin/composable-admin", default-features = false }

[dev-dependencies]
fadroma = { path = "../../libraries/fadroma-21.07/core", features = [
  "scrt-harness"
] }
kukumba = { path = "../../libraries/kukumba" }
serde_json = "1.0"
wasm-bindgen = "0.2"
