[package]
name = "sienna-rewards"
version = "3.0.0-pre"
authors = ["Adam Avramov <adam@hack.bg>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
path = "lib.rs"

[dependencies]
fadroma = { path = "../../libraries/fadroma-next/lib", features = ["scrt-all"] }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
wasm-bindgen = { optional = true, version = "0.2" }

[dev-dependencies]
fadroma = { path = "../../libraries/fadroma-next/lib", features = [ "harness", "backtraces" ] }
kukumba = { path = "../../libraries/kukumba" }
serde_json = "1.0"
tabwriter = "1.2.1"
yansi = "0.5.0"
backtrace = "0.3.61"
color-backtrace = "0.5.1"
rand = "0.8.4"
prettytable-rs = "^0.8"
serde_yaml = "0.8"

[features]
# this allows the contract to be build for a mock environment
# that is hosted in a browser. allows dashboard and fast integration tests
browser = [
  "fadroma/browser",
  "wasm-bindgen"
]
