[package]
name = "sienna-rpt"
version = "1.0.0-rc1"
authors = ["Adam Avramov <adam@hack.bg>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema  = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
cosmwasm-std     = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
fadroma          = { path = "../../libraries/fadroma" }
linear-map       = { path = "../../libraries/linear-map" }
schemars         = "0.7"
secret-toolkit   = { git = "https://github.com/enigmampc/secret-toolkit" }
serde            = { version = "1.0.103", default-features = false, features = ["derive"] }
sienna-mgmt      = { path = "../mgmt" }
sienna-migrate   = { path = "../../libraries/migrate" }
snafu            = { version = "0.6.3", features = ["backtraces"] }

[dev-dependencies]
kukumba = { path = "../../libraries/kukumba" }
snip20-reference-impl = { path = "../token" }
