[package]
name = "snip20-sienna"
version = "0.1.0"
authors = ["Itzik <itzik@keytango.io>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
secret-toolkit = { git = "https://github.com/enigmampc/secret-toolkit", rev = "6aa670f" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
bincode2 = "2.0.1"
subtle = { version = "2.2.3", default-features = false }
base64 = "0.12.3"
hex = "0.4.2"

rand_chacha = { version = "0.2.2", default-features = false }
rand_core = { version =  "0.5.1", default-features = false }
sha2 = { version = "0.9.1", default-features = false }

fadroma-bind-js = { optional = true, path = "../../libraries/fadroma-next/bind-js" }
wasm-bindgen = { optional = true, version = "0.2" }

[dev-dependencies]
cosmwasm-vm = { package = "cosmwasm-sgx-vm", git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
cosmwasm-schema = { version = "0.9.2" }

[features]
browser = [ "fadroma-bind-js", "wasm-bindgen" ]
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
