[package]
name = "sienna-rewards-emergency-proxy"
version = "0.1.0"
authors = ["Adam Avramov <adam@hack.bg>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
path = "rewards_emergency_proxy.rs"

[dependencies]
sienna-rewards = { path = "../rewards" }
fadroma = { path = "../../libraries/fadroma-next/core", features = [
  "scrt-addr",
  "scrt-admin",
  "scrt-callback",
  "scrt-contract",
  "scrt-migrate",
  "scrt-snip20-api",
  "scrt-storage",
  "scrt-utils",
  "scrt-vk"
] }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
wasm-bindgen = { optional = true, version = "0.2" }

[dev-dependencies]
fadroma = { path = "../../libraries/fadroma-next/core", features = [
  "scrt-harness",
  "backtraces"
] }
kukumba = { path = "../../libraries/kukumba" }
serde_json = "1.0"
tabwriter = "1.2.1"
yansi = "0.5.0"
backtrace = "0.3.61"
color-backtrace = "0.5.1"
