[package]
name = "amm-shared"
version = "0.1.0"
authors = ["Asparuh Kamenov <asparuhkamenov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
fadroma = { path = "../fadroma-next/crates/fadroma", features = [ "scrt" ] }
fadroma-snip20-impl = { path = "../fadroma-next/crates/fadroma-snip20-impl" }
