[package]
name = "amm-shared"
version = "0.1.0"
authors = ["Asparuh Kamenov <asparuhkamenov@gmail.com>"]
edition = "2018"

[dependencies]
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
fadroma = { path = "../../deps/crates/fadroma", features = [ "scrt" ] }
fadroma-snip20-impl = { path = "../../deps/crates/fadroma-snip20-impl" }
