[package]
name = "lend-shared"
version = "0.1.0"
edition = "2018"

[dependencies]
fadroma = { path = "../../deps/fadroma/crates/fadroma", features = ["derive"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
primitive-types = { version = "0.9.1", default-features = false }
