[package]
name    = "linear-map"
version = "1.0.0-rc1"
authors = ["Adam A. <adam@hack.bg>"]
edition = "2018"

[lib]
name = "linear_map"
path = "lib/lib.rs"

[dependencies]
fadroma = { path = "../../deps/fadroma/crates/fadroma" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
