[package]
name    = "sienna-migrate"
version = "0.1.0"
authors = ["Adam A. <adam@hack.bg>"]
edition = "2018"

[lib]
name = "sienna_migration"
path = "lib/lib.rs"

[dependencies]
fadroma = { path = "../../deps/fadroma/crates/fadroma" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
